<resources>
    <string name="app_name">MyChatApp</string>
    <string name="welcome">Welcome</string>
    <string name="gmail">Gmail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup">SignUp</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="user_name">user_name</string>
    <string name="menu_sign_up">sign up</string>
    <string name="sent_message">sent message</string>
    <string name="receive_message">receive message</string>
    <string name="type_a_message">type a message</string>
</resources>